--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ requires-python = ">=3.12,<4.0"
 dependencies = [
     "langchain (>=0.3.27,<0.4.0)",
     "fastapi (>=0.116.1,<0.117.0)",
+    "mwparserfromhell (>=0.7.2,<0.8.0)",
+    "requests (>=2.32.4,<3.0.0)",
 ]
 
 [tool.poetry]
