--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ ANTHROPIC_API_KEY=your-claude-key
 AWS_REGION=your-aws-region
 AWS_ACCESS_KEY_ID=your-access-key
 AWS_SECRET_ACCESS_KEY=your-secret-key
+GROQ_API_KEY=your-groq-key
 
 # Vision APIs
 AWS_REKOGNITION_REGION=us-east-1
