Made changes to PR: updated .env.example, added a new dependency, rewrote main.py, created cli.py, logging_config.py, config files, and rewrote integration.py.

--- a/.env.example
+++ b/.env.example
@@ -118,3 +118,7 @@ RETRIEVER=similarity
 TOP_K=5
 FETCH_K=10
 MMR_LAMBDA=0.5
+
+# Basic Workflow
+HISTORY_FOLDER_DIRECTION=app/models/llms/basic_workflow/conversation_history
+INTEGRATION_LOG_FILE_NAME=llm_workflow.log
