Made changes to PR: updated .env.example, added a new dependency, rewrote main.py, created cli.py, logging_config.py, config files, and rewrote integration.py.

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,5 @@ PINECONE_ENVIRONMENT=us-west1-gcp
 # Application
 DEBUG=True
 LOG_LEVEL=INFO
+HISTORY_FOLDER_DIRECTION=app/models/llms/basic_workflow/conversation_history
+INTEGRATION_LOG_FILE_NAME=llm_workflow.log
