--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ requires-python = ">=3.12,<4.0"
 dependencies = [
     "langchain (>=0.3.27,<0.4.0)",
     "fastapi (>=0.116.1,<0.117.0)",
+    "num2words (>=0.5.12,<0.6.0)",
 ]
 
 [tool.poetry]
