--- a/.env.example
+++ b/.env.example
@@ -122,3 +122,4 @@ MMR_LAMBDA=0.5
 # Basic Workflow
 HISTORY_FOLDER_DIRECTION=app/models/llms/basic_workflow/conversation_history
 INTEGRATION_LOG_FILE_NAME=llm_workflow.log
+CONFIG_FOLDER_PATH=app/models/llms/basic_workflow/config
