--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,5 @@ DEBUG=True
 LOG_LEVEL=INFO
 HISTORY_FOLDER_DIRECTION=app/models/llms/basic_workflow/conversation_history
 INTEGRATION_LOG_FILE_NAME=llm_workflow.log
+CONFIG_FOLDER_PATH=app/models/llms/basic_workflow/config
+ITINERARY_STORAGE_DIR=app/models/llms/basic_workflow/conversation_history/conversation_history_json
