Added fixes, logging and unit tests

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,10 @@ AWS_ACCESS_KEY_ID=your-access-key
 AWS_SECRET_ACCESS_KEY=your-secret-key
 GROQ_API_KEY=your-groq-key
 
+#LLM Parameters
+GROQ_MODEL_NAME=groq-llama3-70b
+GROQ_TEMPERATURE=0.7
+
 # Vision APIs
 AWS_REKOGNITION_REGION=us-east-1
 
