Get metadata init

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,8 @@ PINECONE_ENVIRONMENT=us-west1-gcp
 # Application
 DEBUG=True
 LOG_LEVEL=INFO
+HISTORY_FOLDER_DIRECTION=app/models/llms/basic_workflow/conversation_history
+INTEGRATION_LOG_FILE_NAME=llm_workflow.log
+CONFIG_FOLDER_PATH=app/models/llms/basic_workflow/config
+ITINERARY_STORAGE_DIR=app/models/llms/basic_workflow/conversation_history/conversation_history_json
+GOOGLE_MAPS_API_KEY="your_api_key_here"
