Rewrite PR + add processed data files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "fastapi (>=0.116.1,<0.117.0)",
     "mwparserfromhell (>=0.7.2,<0.8.0)",
     "requests (>=2.32.4,<3.0.0)",
+    "pytz (>=2024.1,<2025.0)",
+    "pandas (>=2.3.1,<3.0.0)",
 ]
 
 [tool.poetry]
