--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,4 @@ INTEGRATION_LOG_FILE_NAME=llm_workflow.log
 CONFIG_FOLDER_PATH=app/models/llms/basic_workflow/config
 ITINERARY_STORAGE_DIR=app/models/llms/basic_workflow/conversation_history/conversation_history_json
 GOOGLE_MAPS_API_KEY="your_api_key_here"
+TIMEZONE=Europe/Kyiv
