--- a/.env.example
+++ b/.env.example
@@ -54,3 +54,8 @@ EMBED_POLITE_DELAY=0.1
 EMBED_RETRY_ATTEMPTS=5
 EMBED_RETRY_MIN_WAIT=1
 EMBED_RETRY_MAX_WAIT=30
+
+# Logger
+LOGGING_CONFIG_FILE=logger.yaml
+LOG_LEVEL=INFO
+SERVICE_NAME=local-fastapi
