--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ dependencies = [
     "fastapi (>=0.116.1,<0.117.0)",
     "mwparserfromhell (>=0.7.2,<0.8.0)",
     "requests (>=2.32.4,<3.0.0)",
+    "pyyaml (>=6.0.2,<7.0.0)",
+    "uvicorn (>=0.35.0,<0.36.0)",
+    "python-json-logger (>=3.3.0,<4.0.0)",
+    "python-dotenv (>=1.1.1,<2.0.0)",
 ]
 
 [tool.poetry]
