--- a/ruff.toml
+++ b/ruff.toml
@@ -31,6 +31,8 @@ ignore = [
     "B008",  # do not perform function calls in argument defaults
     "W191",  # indentation contains tabs
     "B904",  # ignore raise-without-from-inside-except
+    "B005",  # ignore using `.strip()` with multi-character strings
+    "E722",  # ignore do not use bare `except`
 ]
 
 [lint.isort]
