--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ dependencies = [
     "requests (>=2.32.4,<3.0.0)",
     "pytz (>=2024.1,<2025.0)",
     "pandas (>=2.3.1,<3.0.0)",
+    "aiohttp (>=3.9.0,<4.0.0)",
+    "tqdm (>=4.66.0,<5.0.0)",
+    "pyyaml (>=6.0.1,<7.0.0)",
+    "googlemaps (>=4.10.0,<5.0.0)",
+    "python-dotenv (>=1.0.0,<2.0.0)",
 ]
 
 [tool.poetry]
