--- a/.env.example
+++ b/.env.example
@@ -4,26 +4,67 @@ API_HOST=127.0.0.1
 API_PORT=8000
 
 # OpenAI / Claude via Bedrock
-OPENAI_API_KEY=your-openai-key
+OPENAI_API_KEY=your-openai-api-key
 ANTHROPIC_API_KEY=your-claude-key
 AWS_REGION=your-aws-region
 AWS_ACCESS_KEY_ID=your-access-key
 AWS_SECRET_ACCESS_KEY=your-secret-key
+GROQ_API_KEY=your-groq-key
+
+#LLM Parameters
+GROQ_MODEL_NAME=groq-llama3-70b
+GROQ_TEMPERATURE=0.7
 
 # Vision APIs
 AWS_REKOGNITION_REGION=us-east-1
 
+# Google map API
+GOOGLE_MAPS_API_KEY=your-google-map-api-key
+
 # Vector DB
-VECTOR_DB=your-db                # Options: faiss, chroma, pinecone
+VECTOR_DB=your-db                # Options: weviate, chroma, faiss
 PINECONE_API_KEY=your-key
 PINECONE_ENVIRONMENT=us-west1-gcp
 
 # Application
 DEBUG=True
 LOG_LEVEL=INFO
-HISTORY_FOLDER_DIRECTION=app/models/llms/basic_workflow/conversation_history
-INTEGRATION_LOG_FILE_NAME=llm_workflow.log
-CONFIG_FOLDER_PATH=app/models/llms/basic_workflow/config
-ITINERARY_STORAGE_DIR=app/models/llms/basic_workflow/conversation_history/conversation_history_json
-GOOGLE_MAPS_API_KEY="your_api_key_here"
-TIMEZONE=Europe/Kyiv
+
+# Embeddings generator configurations
+
+# Embedding Model & Provider
+EMBED_MODEL=text-embedding-3-small
+EMBED_PROVIDER=openai           
+
+# Data cleaning
+EMBED_CLEANING_VERSION=v1.2
+
+# Metadata 
+EMBED_METADATA_CSV_PATH=data/metadata.csv
+
+# Directories
+EMBED_INPUT_DIR=data/raw
+EMBED_OUTPUT_DIR=data/embtest
+MAP_DATA_CONFIG_PATH=app/config/map_data_service_config.yaml
+
+# Chunking & Tokenization
+# Tokens per chunk before splitting (affects chunk size and embedding cost).
+# Higher overlap improves semantic continuity but increases number of chunks (and cost).
+EMBED_MAX_TOKENS=450
+EMBED_CHUNK_OVERLAP=0.2
+
+# Chunking & Tokenization
+EMBED_BATCH_SIZE=64
+
+# API Batching & Rate Limits
+EMBED_POLITE_DELAY=0.1
+
+# Retry Strategy
+EMBED_RETRY_ATTEMPTS=5
+EMBED_RETRY_MIN_WAIT=1
+EMBED_RETRY_MAX_WAIT=30
+
+# Logger
+LOGGING_CONFIG_FILE=logger.yaml
+LOG_LEVEL=INFO
+SERVICE_NAME=local-fastapi
