--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "uvicorn (>=0.35.0,<0.36.0)",
     "python-json-logger (>=3.3.0,<4.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
+    "pydantic (>=2.8,<3.0)",
     "openai (>=1.99.9,<2.0.0)",
 ]
 
