--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = []
 readme = "README.md"
-requires-python = ">=3.12,<4.0"
+requires-python = ">=3.11,<4.0"
 dependencies = [
     "langchain (>=0.3.27,<0.4.0)",
     "fastapi (>=0.116.1,<0.117.0)",
@@ -18,12 +18,17 @@ dependencies = [
     "googlemaps (>=4.10.0,<5.0.0)",
     "pyyaml (>=6.0.2,<7.0.0)",
     "uvicorn (>=0.35.0,<0.36.0)",
+    "gunicorn (>=21.1.0,<22.1.0)",
     "python-json-logger (>=3.3.0,<4.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
     "openai (>=1.99.9,<2.0.0)",
 ]
 
 [tool.poetry]
+name = "voyager-t800"
+version = "0.1.0"
+description = ""
+authors = []
 packages = [
     { include = "app" }
 ]
