--- a/app/config/map_data_service_config.yaml
+++ b/app/config/map_data_service_config.yaml
@@ -30,3 +30,53 @@ output_csv_path: "data/attractions_metadata.csv"
 output_json_path: "data/processed_data_json"
 place_details_base_url: "https://maps.googleapis.com/maps/api/place/details/json"
 find_place_base_url: "https://maps.googleapis.com/maps/api/place/findplacefromtext/json"
+prompts_dir: "app/prompts"
+
+fallback_values:
+  city: "the destination"
+  destination: "the destination"
+  days: "several"
+  duration: "your preferred duration"
+  month: "your preferred time"
+  preferences: "your interests"
+  interests: "your interests"
+  budget: "your budget"
+  travel_style: "your preferred travel style"
+  nation: "the country"
+  special_requirements: "any special requirements"
+  additional_context: "any additional context"
+  chat_history: "previous conversation context"
+  user_input: "your travel request"
+
+api:
+  google_maps_api_key: "${GOOGLE_MAPS_API_KEY}"
+
+timezone:
+  default: "Europe/Kyiv"
+
+opening_hours:
+  defaults:
+    weekdays:
+      start: "12:00"
+      end: "21:00"
+    weekends:
+      start: "10:00"
+      end: "21:00"
+
+coordinates:
+  default:
+    lat: 0.0
+    lng: 0.0
+
+address:
+  target_address_types:
+    - "postal_code"
+    - "administrative_area_level_1"
+    - "administrative_area_level_2"
+    - "sublocality_level_1"
+
+attraction_csv_path: "data/attractions_names_list.csv"
+output_csv_path: "data/attractions_metadata.csv"
+output_json_path: "data/processed_data_json"
+place_details_base_url: "https://maps.googleapis.com/maps/api/place/details/json"
+find_place_base_url: "https://maps.googleapis.com/maps/api/place/findplacefromtext/json"
