created basic rag

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ ANTHROPIC_API_KEY=your-claude-key
 GROQ_API_KEY=your-groq-key
 
 #LLM Parameters
-GROQ_MODEL_NAME=groq-llama3-70b
+GROQ_MODEL_NAME=llama3-8b-8192
 GROQ_TEMPERATURE=0.7
 
 # Vision APIs
@@ -107,3 +107,8 @@ EMBED_RETRY_MAX_WAIT=30
 LOGGING_CONFIG_FILE=logger.yaml
 LOG_LEVEL=INFO
 SERVICE_NAME=local-fastapi
+
+# Retriever config
+RETRIVER=similarity
+TOP_K=5
+MMR_LAMBDA=0.5
