--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ dependencies = [
     "python-json-logger (>=3.3.0,<4.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
     "openai (>=1.99.9,<2.0.0)",
+    "langchain-groq (>=0.3.7,<0.4.0)",
+    "langchain-community (>=0.3.27,<0.4.0)",
+    "langchain-openai (>=0.3.30,<0.4.0)",
+    "weaviate-client (==3.25.2)",
 ]
 
 [tool.poetry]
