refactor(docker): simplify environment configuration
- Use env_file directives for service configuration
- Update documentation for docker set up
- Clean up .gitignore for .prod.env exclusion

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,13 @@
-# FastAPI
-APP_ENV=development
-API_HOST=127.0.0.1
-API_PORT=8000
+# ==========================================================================
+# THIS ENV FILE SHOULD BE USED ONLY FOR DEVELOPMENT PURPOSE 
+# Do NOT put AWS keys here
+# AWS credentials are passed ONLY from the host shell environment variables
+# See README.md
+# ==========================================================================
 
 # OpenAI / Claude via Bedrock
 OPENAI_API_KEY=your-openai-api-key
 ANTHROPIC_API_KEY=your-claude-key
-AWS_REGION=your-aws-region
-AWS_ACCESS_KEY_ID=your-access-key
-AWS_SECRET_ACCESS_KEY=your-secret-key
 GROQ_API_KEY=your-groq-key
 
 #LLM Parameters
@@ -21,16 +20,55 @@ AWS_REKOGNITION_REGION=us-east-1
 # Google map API
 GOOGLE_MAPS_API_KEY=your-google-map-api-key
 
-# Vector DB
-VECTOR_DB=your-db                # Options: weviate, chroma, faiss
-PINECONE_API_KEY=your-key
-PINECONE_ENVIRONMENT=us-west1-gcp
-
 # Application
 DEBUG=True
 LOG_LEVEL=INFO
 
+# =====================
+# Docker development settings
+# =====================
+# Local development environment (hot-reload)
+
+HOST=0.0.0.0
+CONTAINER_PORT_DEV=8000
+HOST_PORT_DEV=8000
+ACCESS_LOG_FILE=-
+
+# FastAPI
+FASTAPI_ENV_DEV=development
+
+# =====================
+# Docker development services settings
+# =====================
+
+# DynamoDB
+DYNAMO_CONTAINER_PORT=8003
+DYNAMO_HOST_PORT=8003
+DYNAMO_USER=app_dev
+
+# Redis
+REDIS_PASSWORD=redis_pass
+REDIS_USER=default
+REDIS_HOST_PORT=6379
+REDIS_CONTAINER_PORT=6379
+REDIS_PORT=2422
+
+# Weaviate DB (Vector database)
+WEAVIATE_DB_HOST_PORT=8090
+WEAVIATE_DB_CONTAINER_PORT=8090
+QUERY_DEFAULTS_LIMIT=25
+AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED=true
+PERSISTENCE_DATA_PATH=/var/lib/weaviate
+DEFAULT_VECTORIZER_MODULE=none
+CLUSTER_HOSTNAME=node1
+ASYNC_INDEXING=true
+ENABLE_MODULES=""
+CLUSTER_JOIN=""
+GRPS_API_PORT=50051
+
+# =====================
 # Embeddings generator configurations
+# =====================
 
 # Embedding Model & Provider
 EMBED_MODEL=text-embedding-3-small
