refactor(docker): improve Redis secret handling add minor changes and improvements throughout

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,7 @@ LOG_LEVEL=INFO
 HOST=0.0.0.0
 CONTAINER_PORT_DEV=8000
 HOST_PORT_DEV=8000
+UVICORN_MODULE_DEV=app.main
 ACCESS_LOG_FILE=-
 
 # FastAPI
@@ -47,7 +48,7 @@ DYNAMO_HOST_PORT=8003
 DYNAMO_USER=app_dev
 
 # Redis
-REDIS_PASSWORD=redis_pass
+# Redis password must be set through docker secret
 REDIS_USER=default
 REDIS_HOST_PORT=6379
 REDIS_CONTAINER_PORT=6379
