--- a/.prod.env.example
+++ b/.prod.env.example
@@ -32,8 +32,10 @@ LOG_LEVEL=INFO
 HOST=0.0.0.0
 CONTAINER_PORT_PROD=8001
 HOST_PORT_PROD=8001
+UVICORN_MODULE_PROD=app.main
 GUNICORN_WORKERS=4
 ACCESS_LOG_FILE=-
+LOG_LEVEL:info
 
 # FastAPI
 FASTAPI_ENV_PROD=production
@@ -48,7 +50,7 @@ DYNAMO_HOST_PORT=8003
 DYNAMO_USER=app_dev
 
 # Redis
-REDIS_PASSWORD=
+# Redis password must be set through docker secret
 REDIS_USER=
 REDIS_HOST_PORT=6379
 REDIS_CONTAINER_PORT=6379
