--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,7 +110,7 @@ services:
       - ./app/config:/app/app/config
       - ./app/frontend:/app/app/frontend
       - ./app/main.py:/app/app/main.py
-      - ./app/__init__.py:/app/app/__init__.py
+
     environment:
       # AWS credentials are passed ONLY from the host shell environment variables
       - AWS_ACCESS_KEY_ID
@@ -167,7 +167,12 @@ services:
     image: redis:7
     container_name: redis-cache
     restart: unless-stopped
-    command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
+    secrets:
+      - redis_password
+    environment:
+      - REDIS_PASSWORD_FILE=/run/secrets/redis_password
+    command: >
+      sh -c "redis-server --requirepass $(cat /run/secrets/redis_password)"
     volumes:
       - redis_data:/data
     networks:
@@ -175,7 +180,7 @@ services:
     ports:
       - "${REDIS_HOST_PORT}:${REDIS_CONTAINER_PORT}"
     healthcheck:
-      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping"]
+      test: ["CMD-SHELL", "redis-cli -a $(cat /run/secrets/redis_password) ping | grep PONG"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -212,3 +217,7 @@ volumes:
 networks:
   app-network:
     driver: bridge
+
+secrets:
+  redis_password:
+    file: ./secrets/redis_password.txt
