Created 'dynamodb_client.py' file with two functions: 'put_item()' for writing data into table and 'get_item()' for reading data from table. Created 'test_put_get_items_DynamoDB.py' file for testing these two functions. Added 'AWS_REGION' and 'DYNAMODB_TABLE' variables into '.env.example' file.

--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,7 @@ EMBED_RETRY_MAX_WAIT=30
 LOGGING_CONFIG_FILE=logger.yaml
 LOG_LEVEL=INFO
 SERVICE_NAME=local-fastapi
+
+#DynamoDB
+AWS_REGION= us-east-2
+DYNAMODB_TABLE = session_metadata
