--- a/.env.example
+++ b/.env.example
@@ -109,7 +109,7 @@ LOG_LEVEL=INFO
 SERVICE_NAME=local-fastapi
 
 # Retriever config
-RETRIVER=similarity
+RETRIEVER=similarity
 TOP_K=5
 FETCH_K=10
 MMR_LAMBDA=0.5
