--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ dependencies = [
     "python-json-logger (>=3.3.0,<4.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
     "openai (>=1.99.9,<2.0.0)",
+    "pydantic (>=2.0.0,<3.0.0)",
+    "pydantic-settings (>=2.0.0,<3.0.0)",
+    "langchain-groq (>=0.3.7,<0.4.0)",
 ]
 
 [tool.poetry]
