fix: adjust docker-compose.yaml for weaviate - Also conflict fix for poetry packages

--- a/.env.example
+++ b/.env.example
@@ -63,6 +63,7 @@ PERSISTENCE_DATA_PATH=/var/lib/weaviate
 DEFAULT_VECTORIZER_MODULE=none
 CLUSTER_HOSTNAME=node1
 ASYNC_INDEXING=true
+AUTOSCHEMA_ENABLED=false
 ENABLE_MODULES=""
 CLUSTER_JOIN=""
 GRPS_API_PORT=50051
