--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ ANTHROPIC_API_KEY=your-claude-key
 GROQ_API_KEY=your-groq-key
 
 #LLM Parameters
-GROQ_MODEL_NAME=llama3-8b-8192
+GROQ_MODEL_NAME=llama-3.1-8b-instant
 GROQ_TEMPERATURE=0.7
 
 # Vision APIs
