feat: implement AWS Cognito auth system
Add signup, login, token refresh, logout

--- a/.env.example
+++ b/.env.example
@@ -114,3 +114,8 @@ RETRIEVER=similarity
 TOP_K=5
 FETCH_K=10
 MMR_LAMBDA=0.5
+
+# AWS Cognito (User authentication)
+AWS_REGION=us-east-1
+COGNITO_USER_POOL_ID=your_pool_id_here
+COGNITO_CLIENT_ID=your_client_id_here
