feat: implement AWS Cognito auth system
Add signup, login, token refresh, logout

--- a/.env.example
+++ b/.env.example
@@ -123,3 +123,7 @@ MMR_LAMBDA=0.5
 HISTORY_FOLDER_DIRECTION=app/models/llms/basic_workflow/conversation_history
 INTEGRATION_LOG_FILE_NAME=llm_workflow.log
 CONFIG_FOLDER_PATH=app/models/llms/basic_workflow/config
+# AWS Cognito (User authentication)
+AWS_REGION=us-east-1
+COGNITO_USER_POOL_ID=your_pool_id_here
+COGNITO_CLIENT_ID=your_client_id_here
