--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ dependencies = [
     "pydantic (>=2.11.7,<3.0.0)",
     "pydantic-settings (>=2.0.0,<3.0.0)",
     "langchain-groq (>=0.3.7,<0.4.0)",
-    "weaviate-client (>=4.16.9,<5.0.0)",
+    "streamlit (>=1.49.1,<2.0.0)",
+    "weaviate-client (>=3.26.7,<4.0.0)",
     "langchain-community (>=0.3.27,<0.4.0)",
     "langchain-openai (>=0.3.30,<0.4.0)",
 ]
