--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@
 # - streamlit: Production Streamlit frontend
 # - dynamodb-local: Local DynamoDB instance for development and testing
 # - redis: Redis cache with authentication and data persistence
-# - weaviate-db: Vector database for AI-powered travel recommendations
+# - weaviate: Vector database for AI-powered travel recommendations
 #
 # USAGE INSTRUCTIONS:
 #
@@ -16,10 +16,10 @@
 #   Prerequisites:
 #     - No AWS credentials needed (uses local DynamoDB)
 #     - Ensure .env file exists with development settings
-#   
+#
 #   Startup:
 #     docker compose --profile dev up --build
-#   
+#
 #   Default access:
 #     - API: http://localhost:8000
 #     - Streamlit: http://localhost:8501
@@ -31,10 +31,10 @@
 #   Prerequisites:
 #     - Export AWS credentials: AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_REGION
 #     - Ensure .prod.env file exists with production settings
-#   
+#
 #   Startup:
 #     docker compose --profile prod --env-file .prod.env up --build
-#   
+#
 #   Default access:
 #     - API: http://localhost:8001
 #     - Streamlit: http://localhost:8502
@@ -43,7 +43,7 @@
 #     - Weaviate: http://localhost:8090
 #
 # ENVIRONMENT VARIABLES:
-# 
+#
 # SHELL EXPORT (Required for PRODUCTION only):
 #   AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_REGION
 #   These must be exported in your shell before running docker compose --profile prod
@@ -52,7 +52,7 @@
 #   - USE_LOCAL_DYNAMODB (true for dev, false for prod)
 #   - DYNAMODB_ENDPOINT_URL (for dev: http://dynamodb-local:8003)
 #   - DYNAMO_HOST_PORT, DYNAMO_CONTAINER_PORT
-#   - REDIS_HOST_PORT, REDIS_CONTAINER_PORT  
+#   - REDIS_HOST_PORT, REDIS_CONTAINER_PORT
 #   - WEAVIATE_DB_HOST_PORT, WEAVIATE_DB_CONTAINER_PORT
 #   - HOST_PORT_DEV, CONTAINER_PORT_DEV
 #   - HOST_PORT_PROD, CONTAINER_PORT_PROD
@@ -82,10 +82,15 @@ services:
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
       - AWS_REGION
+      # Weaviate configuration for Docker Compose
+      - WEAVIATE_HOST=weaviate
+      - WEAVIATE_PORT=${WEAVIATE_DB_CONTAINER_PORT:-8080}
+      - WEAVIATE_GRPC_HOST=weaviate
+      - WEAVIATE_GRPC_PORT=${GRPS_API_PORT:-50051}
     depends_on:
       redis:
         condition: service_healthy
-      weaviate-db:
+      weaviate:
         condition: service_healthy
     networks:
       - app-network
@@ -119,7 +124,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-  
+
   # ============================================================================
   # DEVELOPMENT CONFIGURATION
   # ============================================================================
@@ -135,23 +140,29 @@ services:
       - "${HOST_PORT_DEV:-8000}:${CONTAINER_PORT_DEV:-8000}"
     volumes:
       - ./app:/app/app
+      - ./data:/app/data
 
     environment:
       # Development uses local DynamoDB - no AWS credentials needed
       - USE_LOCAL_DYNAMODB=true
       - DYNAMODB_ENDPOINT_URL=http://dynamodb-local:8003
       - AWS_REGION=us-east-2
+      # Weaviate configuration for Docker Compose
+      - WEAVIATE_HOST=weaviate
+      - WEAVIATE_PORT=${WEAVIATE_DB_CONTAINER_PORT:-8080}
+      - WEAVIATE_GRPC_HOST=weaviate
+      - WEAVIATE_GRPC_PORT=${GRPS_API_PORT:-50051}
     depends_on:
       dynamodb-local:
         condition: service_healthy
       redis:
         condition: service_healthy
-      weaviate-db:
+      weaviate:
         condition: service_healthy
     networks:
       - app-network
     profiles: ["dev"]
-    
+
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:${CONTAINER_PORT_DEV}/docs"]
       interval: 15s
@@ -184,7 +195,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-  
+
   # ============================================================================
   # INFRASTRUCTURE SERVICES
   # ============================================================================
@@ -193,13 +204,13 @@ services:
     container_name: dynamodb-local
     restart: unless-stopped
     command: -jar DynamoDBLocal.jar -sharedDb -dbPath ./data -port ${DYNAMO_CONTAINER_PORT}
-    working_dir: /home/dynamodblocal       
+    working_dir: /home/dynamodblocal
     volumes:
-      - ./dynamodb:/home/dynamodblocal/data  
+      - ./dynamodb:/home/dynamodblocal/data
     networks:
       - app-network
     ports:
-      - "${DYNAMO_HOST_PORT}:${DYNAMO_CONTAINER_PORT}" 
+      - "${DYNAMO_HOST_PORT}:${DYNAMO_CONTAINER_PORT}"
     environment:
       # AWS credentials are passed ONLY from the host shell environment variables
       - AWS_ACCESS_KEY_ID
@@ -237,7 +248,7 @@ services:
       timeout: 5s
       retries: 5
 
-  weaviate-db:
+  weaviate:
     image: semitechnologies/weaviate:1.32.3
     container_name: weaviate
     restart: unless-stopped
