--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ dependencies = [
     "weaviate-client (>=4.16.9,<5.0.0)",
     "langchain-community (>=0.3.27,<0.4.0)",
     "langchain-openai (>=0.3.30,<0.4.0)",
+    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
+    "pyjwt (>=2.9.0,<3.0.0)",
+    "email-validator (>=2.3.0,<3.0.0)",
 ]
 
 [tool.poetry]
