--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,8 @@ dependencies = [
     "pyjwt (>=2.10.1,<3.0.0)",
     "moto (>=5.1.12,<6.0.0)",
     "joserfc (>=1.3.2,<2.0.0)",
+    "protobuf (>=6.32.1,<7.0.0)",
+    "streamlit (>=1.49.1,<2.0.0)"
 ]
 
 [tool.poetry]
