--- a/.env.example
+++ b/.env.example
@@ -118,11 +118,16 @@ RETRIEVER=similarity
 TOP_K=5
 FETCH_K=10
 MMR_LAMBDA=0.5
+HYBRID_ALPHA=0.7
+
+# Claude response mock (for testing without API calls)
+CLAUDE_RESPONSE_MOCK_PATH=app/utils/mocks/claude_response_mock.json
 
 # Basic Workflow
 HISTORY_FOLDER_DIRECTION=app/models/llms/basic_workflow/conversation_history
 INTEGRATION_LOG_FILE_NAME=llm_workflow.log
 CONFIG_FOLDER_PATH=app/models/llms/basic_workflow/config
+
 # AWS Cognito (User authentication)
 AWS_REGION=us-east-1
 COGNITO_USER_POOL_ID=your_pool_id_here
