--- a/.prod.env.example
+++ b/.prod.env.example
@@ -67,3 +67,18 @@ ASYNC_INDEXING=true
 ENABLE_MODULES=""
 CLUSTER_JOIN=""
 GRPS_API_PORT=50051
+
+# Streamlit
+API_BASE_URL=http://api:8001
+STREAMLIT_ENV=prod
+VOYAGER_PAGE_TITLE="Voyager-T800 Travel Assistant"
+VOYAGER_PAGE_ICON="🚀"
+VOYAGER_PAGE_TAGLINE="*Your AI-powered conversational trip planner*"
+VOYAGER_MAX_INPUT_LENGTH=500
+VOYAGER_SESSIONS_PAGE_SIZE=10
+
+STREAMLIT_SERVER_PORT=8501
+STREAMLIT_SERVER_ADDRESS=0.0.0.0
+STREAMLIT_SERVER_HEADLESS=true
+STREAMLIT_SERVER_ENABLE_CORS=false
+STREAMLIT_SERVER_ENABLE_XSRF_PROTECTION=false
