--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,12 @@ AWS_REKOGNITION_REGION=us-east-1
 # Google map API
 GOOGLE_MAPS_API_KEY=your-google-map-api-key
 
+# OpenWeather API
+OPENWEATHER_API_KEY="your-openweather-api-key"
+
+# Feature Flags
+VOYAGER_USE_WEATHER=1
+
 # Application
 DEBUG=True
 LOG_LEVEL=INFO
