--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,11 +34,11 @@ dependencies = [
     "botocore (>=1.40.22,<2.0.0)",
     "python-jose[cryptography] (>=3.5.0,<4.0.0)",
     "email-validator (>=2.3.0,<3.0.0)",
-    "jwt (>=1.4.0,<2.0.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
     "moto (>=5.1.12,<6.0.0)",
     "joserfc (>=1.3.2,<2.0.0)",
-    "protobuf (>=6.32.1,<7.0.0)"
+    "protobuf (>=6.32.1,<7.0.0)",
+    "python-multipart (>=0.0.20,<0.0.21)"
 ]
 
 [tool.poetry]
