--- a/app/config/default.yaml
+++ b/app/config/default.yaml
@@ -92,6 +92,14 @@ attraction_parser:
 itinerary:
   api_key: ${MAP_API_KEY:""}
 
+tavily:
+  tavily_api_key: ${TAVILY_API_KEY:""}
+  tavily_api_url: https://api.tavily.com/search
+  tavily_max_results: 5
+  tavily_country: ukraine
+  tavily_include_answer: advanced
+  tavily_timeout: 30
+
 logging_config_file: app/config/logger/logger.yaml
 
 
