--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
     "moto (>=5.1.12,<6.0.0)",
     "joserfc (>=1.3.2,<2.0.0)",
     "protobuf (>=6.32.1,<7.0.0)",
+    "certifi (>=2025.10.5,<2026.0.0)",
     "python-multipart (>=0.0.20,<0.0.21)"
 ]
 
