--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,9 @@ dependencies = [
     "joserfc (>=1.3.2,<2.0.0)",
     "protobuf (>=6.32.1,<7.0.0)",
     "certifi (>=2025.10.5,<2026.0.0)",
-    "python-multipart (>=0.0.20,<0.0.21)"
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "langgraph (>=0.6.9,<0.7.0)",
+    "langchain-aws (>=0.2.35,<0.3.0)"
 ]
 
 [tool.poetry]
